Bug 474873 - Panel in "Auto-Hide" mode makes it unnecessarily difficult to trigger hotcorners sharing the same edge
Summary: Panel in "Auto-Hide" mode makes it unnecessarily difficult to trigger hotcorn...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Hotcorners and edges (other bugs)
Version First Reported In: 5.27.8
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: usability, wayland-only
: 493910 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-09-25 19:50 UTC by stephan.seitz
Modified: 2024-10-01 17:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stephan.seitz 2023-09-25 19:50:56 UTC
SUMMARY


Not sure whether this is a kwin_wayland bug or a plasma bug. It can not be reproduced on a kwin_x11 session. It's also possible that the behavior on Wayland is the intended behavior. Please excuse the generated spam by this bug report in that case.

STEPS TO REPRODUCE
1. Configure a full-width Plasma panel on the top edge of the monitor with visibility "Auto Hide"
2. Configure Screen Edges to perform an action on the top-left corner of the monitor (Settings -> Workspace Behavior -> Screen Edges)
3. Put your mouse cursor quickly to the top-left corner of the monitor

OBSERVED RESULT

- On a kwin_x11 session, both the "Auto Hide" panel will be visible and the top-left corner action will be triggered
- On a kwin_wayland sesssion, only the "Auto Hide" panel will become visible. The top-left corner action will not be triggered. Once the panel is visible, you can move away your mouse cursor minimally from the top-left corner and go back to the top-left corner. The top-left corner action will be triggered as it would on a X11 session. You could also first go with your cursor to the top edge of the screen to make the panel appear and then go the the top-left corner. Also in this case the corner action would work. 

I did not test other window managers.

EXPECTED RESULT

I would expect that on a Wayland session, I would get the same behavior as on a X11 session with both the "Auto Hide" panel appearing and the corner action to be triggered

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Linux stephan-Z87-DS3H 6.5.0-5-generic #5-Ubuntu SMP PREEMPT_DYNAMIC Wed Sep  6 15:11:07 UTC 2023 x86_64 x86_64 x86_64 GNU/Linux 5.27.8
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0-0ubuntu1
Qt Version:  5.15.10

ADDITIONAL INFORMATION

Thank you for your awesome work on KDE!
Comment 1 Nate Graham 2023-09-28 18:32:43 UTC
I can *kind of* reproduce this when I replicate that setup. If I keep forcing my cursor into that corner--especially if I move it more upwards than to the left--the hotcorner eventually activates. Can you reproduce that?
Comment 2 stephan.seitz 2023-09-28 20:40:37 UTC
The behavior I experience is that once the panel is visible. I can enable the corner-action as expected.

I can observe the behavior you're describing:
- move cursor to the very left edge of the screen, then move the cursor up. Only panel activates
- move the cursor to the top edge slightly missing the corner, then move left: first panel get visible, then the corner action get triggered. However, quickly going to the top-edge then left also does not trigger the corner-action.
Comment 3 Nate Graham 2023-09-29 17:44:28 UTC
Cool.
Comment 4 Bug Janitor Service 2024-09-26 09:03:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6508
Comment 5 Vlad Zahorodnii 2024-09-26 13:09:02 UTC
Git commit f9ff283f956b0304c40bdd00f75c9cc8e077514a by Vlad Zahorodnii.
Committed on 26/09/2024 at 12:59.
Pushed by vladz into branch 'master'.

Fix marking auto-hide panels as triggered

Amends e482556d58ff45203899fe4f853f2a713fde42e8.

The client() check was accidentally lost in the linked commit.

M  +1    -1    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/f9ff283f956b0304c40bdd00f75c9cc8e077514a
Comment 6 Vlad Zahorodnii 2024-09-26 13:20:32 UTC
Git commit bd2fcc9ac6a2f17f9f5fe6eaab13d64fc64e19c3 by Vlad Zahorodnii.
Committed on 26/09/2024 at 13:10.
Pushed by vladz into branch 'Plasma/6.2'.

Fix marking auto-hide panels as triggered

Amends e482556d58ff45203899fe4f853f2a713fde42e8.

The client() check was accidentally lost in the linked commit.


(cherry picked from commit f9ff283f956b0304c40bdd00f75c9cc8e077514a)

Co-authored-by: Vlad Zahorodnii <vlad.zahorodnii@kde.org>

M  +1    -1    src/screenedge.cpp

https://invent.kde.org/plasma/kwin/-/commit/bd2fcc9ac6a2f17f9f5fe6eaab13d64fc64e19c3
Comment 7 Nate Graham 2024-10-01 17:02:19 UTC
*** Bug 493910 has been marked as a duplicate of this bug. ***