Fix marking auto-hide panels as triggered

Amends e482556d58ff45203899fe4f853f2a713fde42e8.

The client() check was accidentally lost in the linked commit.

BUG: 474873